// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radar /> It renders IT & BIS radar switch 1`] = `
<Fragment>
  <Navigation
    entry={null}
    home={
      [
        {
          "dirname": "test1",
          "name": "Test 1",
        },
        {
          "dirname": "test2",
          "name": "Test 2",
        },
        {
          "dirname": "dev",
          "name": "Development",
        },
        {
          "dirname": "test4",
          "name": "Test 4",
        },
      ]
    }
    quadrant={null}
    tag={null}
  />
  <div
    className="u-full-width"
    style={
      {
        "marginBottom": "20px",
      }
    }
  >
    <center>
      <button
        data-radar-id="radar"
        onClick={[Function]}
        type="button"
      >
        <Icon
          name="rss"
          spaceBefore={true}
        />
        Engineering
      </button>
      <button
        data-radar-id="radar_it"
        onClick={[Function]}
        type="button"
      >
        <Icon
          name="signal"
          spaceBefore={true}
        />
        IT & BIS
      </button>
    </center>
  </div>
  <h1
    className="center"
  >
    Test
     
    <span
      className="version"
    >
      <Icon
        name="calendar"
        spaceBefore={true}
      />
      5 June, 2019
    </span>
  </h1>
  <div
    className="tags-filter"
  >
    <TagsInput
      onFilter={[Function]}
      tags={
        [
          "90's",
          "java",
        ]
      }
    />
  </div>
  <div
    className="radar-container u-full-width"
  >
    <div
      className="radar-entries"
    >
      <h2>
        Development
      </h2>
      <QuadrantList
        blips={
          [
            {
              "active": true,
              "color": "#43a047",
              "id": 1,
              "index": 0,
              "label": "Java",
              "link": "/entries/java.html",
              "moved": false,
              "quadrant": 2,
              "ring": 0,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -14.474380723221014,
              "y": -41.11798108601353,
            },
            {
              "active": true,
              "color": "#bf360c",
              "id": 3,
              "index": 1,
              "label": "PHP",
              "link": "/entries/php.html",
              "moved": false,
              "quadrant": 2,
              "ring": 3,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -382.075380904692,
              "y": -21.17457418758074,
            },
          ]
        }
        headerLevel={3}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        quadrant={
          {
            "adopt": [
              {
                "active": true,
                "filename": "1.html",
                "id": 1,
                "name": "A - 1",
              },
              {
                "active": true,
                "filename": "2.html",
                "id": 2,
                "name": "B - 2",
              },
            ],
            "assess": [
              {
                "active": true,
                "filename": "3.html",
                "id": 3,
                "name": "C - 3",
              },
            ],
            "dirname": "test1",
            "hold": [
              {
                "active": true,
                "filename": "4.html",
                "id": 4,
                "name": "D - 4",
              },
              {
                "active": true,
                "filename": "5.html",
                "id": 5,
                "name": "E - 5",
              },
              {
                "active": false,
                "filename": "6.html",
                "id": 6,
                "name": "F - 6",
              },
            ],
            "name": "Test",
            "trial": [],
          }
        }
        useShortname={true}
      />
      <h2>
        Test 2
      </h2>
      <QuadrantList
        blips={
          [
            {
              "active": true,
              "color": "#43a047",
              "id": 1,
              "index": 0,
              "label": "Java",
              "link": "/entries/java.html",
              "moved": false,
              "quadrant": 2,
              "ring": 0,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -14.474380723221014,
              "y": -41.11798108601353,
            },
            {
              "active": true,
              "color": "#bf360c",
              "id": 3,
              "index": 1,
              "label": "PHP",
              "link": "/entries/php.html",
              "moved": false,
              "quadrant": 2,
              "ring": 3,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -382.075380904692,
              "y": -21.17457418758074,
            },
          ]
        }
        headerLevel={3}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        quadrant={
          {
            "adopt": [
              {
                "active": true,
                "filename": "1.html",
                "id": 1,
                "name": "A - 1",
              },
              {
                "active": true,
                "filename": "2.html",
                "id": 2,
                "name": "B - 2",
              },
            ],
            "assess": [
              {
                "active": true,
                "filename": "3.html",
                "id": 3,
                "name": "C - 3",
              },
            ],
            "dirname": "test1",
            "hold": [
              {
                "active": true,
                "filename": "4.html",
                "id": 4,
                "name": "D - 4",
              },
              {
                "active": true,
                "filename": "5.html",
                "id": 5,
                "name": "E - 5",
              },
              {
                "active": false,
                "filename": "6.html",
                "id": 6,
                "name": "F - 6",
              },
            ],
            "name": "Test",
            "trial": [],
          }
        }
        useShortname={true}
      />
    </div>
    <div
      className="svg-radar"
    >
      <svg
        id="radar"
      />
    </div>
    <div
      className="radar-entries"
    >
      <h2>
        Test 4
      </h2>
      <QuadrantList
        blips={
          [
            {
              "active": true,
              "color": "#43a047",
              "id": 1,
              "index": 0,
              "label": "Java",
              "link": "/entries/java.html",
              "moved": false,
              "quadrant": 2,
              "ring": 0,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -14.474380723221014,
              "y": -41.11798108601353,
            },
            {
              "active": true,
              "color": "#bf360c",
              "id": 3,
              "index": 1,
              "label": "PHP",
              "link": "/entries/php.html",
              "moved": false,
              "quadrant": 2,
              "ring": 3,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -382.075380904692,
              "y": -21.17457418758074,
            },
          ]
        }
        headerLevel={3}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        quadrant={
          {
            "adopt": [
              {
                "active": true,
                "filename": "1.html",
                "id": 1,
                "name": "A - 1",
              },
              {
                "active": true,
                "filename": "2.html",
                "id": 2,
                "name": "B - 2",
              },
            ],
            "assess": [
              {
                "active": true,
                "filename": "3.html",
                "id": 3,
                "name": "C - 3",
              },
            ],
            "dirname": "test1",
            "hold": [
              {
                "active": true,
                "filename": "4.html",
                "id": 4,
                "name": "D - 4",
              },
              {
                "active": true,
                "filename": "5.html",
                "id": 5,
                "name": "E - 5",
              },
              {
                "active": false,
                "filename": "6.html",
                "id": 6,
                "name": "F - 6",
              },
            ],
            "name": "Test",
            "trial": [],
          }
        }
        useShortname={true}
      />
      <h2>
        Test 1
      </h2>
      <QuadrantList
        blips={
          [
            {
              "active": true,
              "color": "#43a047",
              "id": 1,
              "index": 0,
              "label": "Java",
              "link": "/entries/java.html",
              "moved": false,
              "quadrant": 2,
              "ring": 0,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -14.474380723221014,
              "y": -41.11798108601353,
            },
            {
              "active": true,
              "color": "#bf360c",
              "id": 3,
              "index": 1,
              "label": "PHP",
              "link": "/entries/php.html",
              "moved": false,
              "quadrant": 2,
              "ring": 3,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -382.075380904692,
              "y": -21.17457418758074,
            },
          ]
        }
        headerLevel={3}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        quadrant={
          {
            "adopt": [
              {
                "active": true,
                "filename": "1.html",
                "id": 1,
                "name": "A - 1",
              },
              {
                "active": true,
                "filename": "2.html",
                "id": 2,
                "name": "B - 2",
              },
            ],
            "assess": [
              {
                "active": true,
                "filename": "3.html",
                "id": 3,
                "name": "C - 3",
              },
            ],
            "dirname": "test1",
            "hold": [
              {
                "active": true,
                "filename": "4.html",
                "id": 4,
                "name": "D - 4",
              },
              {
                "active": true,
                "filename": "5.html",
                "id": 5,
                "name": "E - 5",
              },
              {
                "active": false,
                "filename": "6.html",
                "id": 6,
                "name": "F - 6",
              },
            ],
            "name": "Test",
            "trial": [],
          }
        }
        useShortname={true}
      />
    </div>
  </div>
  <div
    className="u-cf"
  />
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="one-half column"
      >
        <h2>
          About the Tech Radar
        </h2>
        <p>
          The Extenda Retail Tech Radar is based on the concept introduced by 
          <a
            href="https://www.thoughtworks.com/radar"
          >
            ThoughtWorks
          </a>
          . The Radar contains a list of technologies, complemented by an assessment result, called ring assessment. The following rings are used:
        </p>
        <ul
          className="no-bullets"
        >
          <li>
            <strong>
              Adopt
            </strong>
             — 
            Technologies we have high confidence in and recommend for wide use.
          </li>
          <li>
            <strong>
              Trial
            </strong>
             — 
            Technologies we have seen used with success, but are yet to be proved successfully in wide use and at large scale. Carries higher risk.
          </li>
          <li>
            <strong>
              Assess
            </strong>
             — 
            Technologies that are promising with a clear potential value for us. Requires research and prototyping to analyze its impact.
          </li>
          <li>
            <strong>
              Hold
            </strong>
             — 
            Technologies not recommended for new products or technology we no longer want to invest in. Existing products may still consider these depending on their legacy.
          </li>
        </ul>
      </div>
      <div
        className="one-half column"
      >
        <h2>
          The Purpose
        </h2>
        <p>
          The Tech Radar aims to inspire and support teams at Extenda Retail to pick the best technologies for their projects. It is way to share experience and knowledge between the teams and to create transparency about the technology direction of Extenda Retail. The Tech Radar also becomes a list of dos and don'ts, what to try and to avoid in order to increase success.
        </p>
        <h2>
          How to Contribute
        </h2>
        <p>
          The Tech Radar is maintained on
           
          <a
            href="https://github.com/extenda/tech-radar"
          >
            GitHub
          </a>
          . There you can read more about the process and how to contribute.
        </p>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`<Radar /> It renders the SVG radar and description 1`] = `
<Fragment>
  <Navigation
    entry={null}
    home={
      [
        {
          "dirname": "test1",
          "name": "Test 1",
        },
        {
          "dirname": "test2",
          "name": "Test 2",
        },
        {
          "dirname": "dev",
          "name": "Development",
        },
        {
          "dirname": "test4",
          "name": "Test 4",
        },
      ]
    }
    quadrant={null}
    tag={null}
  />
  <h1
    className="center"
  >
    Test
     
    <span
      className="version"
    >
      <Icon
        name="tag"
        spaceBefore={true}
      />
      0.0.1-local
    </span>
  </h1>
  <div
    className="tags-filter"
  >
    <TagsInput
      onFilter={[Function]}
      tags={
        [
          "90's",
          "java",
        ]
      }
    />
  </div>
  <div
    className="radar-container u-full-width"
  >
    <div
      className="radar-entries"
    >
      <h2>
        Development
      </h2>
      <QuadrantList
        blips={
          [
            {
              "active": true,
              "color": "#43a047",
              "id": 1,
              "index": 0,
              "label": "Java",
              "link": "/entries/java.html",
              "moved": false,
              "quadrant": 2,
              "ring": 0,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -14.474380723221014,
              "y": -41.11798108601353,
            },
            {
              "active": true,
              "color": "#bf360c",
              "id": 3,
              "index": 1,
              "label": "PHP",
              "link": "/entries/php.html",
              "moved": false,
              "quadrant": 2,
              "ring": 3,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -382.075380904692,
              "y": -21.17457418758074,
            },
          ]
        }
        headerLevel={3}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        quadrant={
          {
            "adopt": [
              {
                "active": true,
                "filename": "1.html",
                "id": 1,
                "name": "A - 1",
              },
              {
                "active": true,
                "filename": "2.html",
                "id": 2,
                "name": "B - 2",
              },
            ],
            "assess": [
              {
                "active": true,
                "filename": "3.html",
                "id": 3,
                "name": "C - 3",
              },
            ],
            "dirname": "test1",
            "hold": [
              {
                "active": true,
                "filename": "4.html",
                "id": 4,
                "name": "D - 4",
              },
              {
                "active": true,
                "filename": "5.html",
                "id": 5,
                "name": "E - 5",
              },
              {
                "active": false,
                "filename": "6.html",
                "id": 6,
                "name": "F - 6",
              },
            ],
            "name": "Test",
            "trial": [],
          }
        }
        useShortname={true}
      />
      <h2>
        Test 2
      </h2>
      <QuadrantList
        blips={
          [
            {
              "active": true,
              "color": "#43a047",
              "id": 1,
              "index": 0,
              "label": "Java",
              "link": "/entries/java.html",
              "moved": false,
              "quadrant": 2,
              "ring": 0,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -14.474380723221014,
              "y": -41.11798108601353,
            },
            {
              "active": true,
              "color": "#bf360c",
              "id": 3,
              "index": 1,
              "label": "PHP",
              "link": "/entries/php.html",
              "moved": false,
              "quadrant": 2,
              "ring": 3,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -382.075380904692,
              "y": -21.17457418758074,
            },
          ]
        }
        headerLevel={3}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        quadrant={
          {
            "adopt": [
              {
                "active": true,
                "filename": "1.html",
                "id": 1,
                "name": "A - 1",
              },
              {
                "active": true,
                "filename": "2.html",
                "id": 2,
                "name": "B - 2",
              },
            ],
            "assess": [
              {
                "active": true,
                "filename": "3.html",
                "id": 3,
                "name": "C - 3",
              },
            ],
            "dirname": "test1",
            "hold": [
              {
                "active": true,
                "filename": "4.html",
                "id": 4,
                "name": "D - 4",
              },
              {
                "active": true,
                "filename": "5.html",
                "id": 5,
                "name": "E - 5",
              },
              {
                "active": false,
                "filename": "6.html",
                "id": 6,
                "name": "F - 6",
              },
            ],
            "name": "Test",
            "trial": [],
          }
        }
        useShortname={true}
      />
    </div>
    <div
      className="svg-radar"
    >
      <svg
        id="radar"
      />
    </div>
    <div
      className="radar-entries"
    >
      <h2>
        Test 4
      </h2>
      <QuadrantList
        blips={
          [
            {
              "active": true,
              "color": "#43a047",
              "id": 1,
              "index": 0,
              "label": "Java",
              "link": "/entries/java.html",
              "moved": false,
              "quadrant": 2,
              "ring": 0,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -14.474380723221014,
              "y": -41.11798108601353,
            },
            {
              "active": true,
              "color": "#bf360c",
              "id": 3,
              "index": 1,
              "label": "PHP",
              "link": "/entries/php.html",
              "moved": false,
              "quadrant": 2,
              "ring": 3,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -382.075380904692,
              "y": -21.17457418758074,
            },
          ]
        }
        headerLevel={3}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        quadrant={
          {
            "adopt": [
              {
                "active": true,
                "filename": "1.html",
                "id": 1,
                "name": "A - 1",
              },
              {
                "active": true,
                "filename": "2.html",
                "id": 2,
                "name": "B - 2",
              },
            ],
            "assess": [
              {
                "active": true,
                "filename": "3.html",
                "id": 3,
                "name": "C - 3",
              },
            ],
            "dirname": "test1",
            "hold": [
              {
                "active": true,
                "filename": "4.html",
                "id": 4,
                "name": "D - 4",
              },
              {
                "active": true,
                "filename": "5.html",
                "id": 5,
                "name": "E - 5",
              },
              {
                "active": false,
                "filename": "6.html",
                "id": 6,
                "name": "F - 6",
              },
            ],
            "name": "Test",
            "trial": [],
          }
        }
        useShortname={true}
      />
      <h2>
        Test 1
      </h2>
      <QuadrantList
        blips={
          [
            {
              "active": true,
              "color": "#43a047",
              "id": 1,
              "index": 0,
              "label": "Java",
              "link": "/entries/java.html",
              "moved": false,
              "quadrant": 2,
              "ring": 0,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -14.474380723221014,
              "y": -41.11798108601353,
            },
            {
              "active": true,
              "color": "#bf360c",
              "id": 3,
              "index": 1,
              "label": "PHP",
              "link": "/entries/php.html",
              "moved": false,
              "quadrant": 2,
              "ring": 3,
              "segment": {
                "clipx": [Function],
                "clipy": [Function],
                "random": [Function],
              },
              "vx": 0,
              "vy": 0,
              "x": -382.075380904692,
              "y": -21.17457418758074,
            },
          ]
        }
        headerLevel={3}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        quadrant={
          {
            "adopt": [
              {
                "active": true,
                "filename": "1.html",
                "id": 1,
                "name": "A - 1",
              },
              {
                "active": true,
                "filename": "2.html",
                "id": 2,
                "name": "B - 2",
              },
            ],
            "assess": [
              {
                "active": true,
                "filename": "3.html",
                "id": 3,
                "name": "C - 3",
              },
            ],
            "dirname": "test1",
            "hold": [
              {
                "active": true,
                "filename": "4.html",
                "id": 4,
                "name": "D - 4",
              },
              {
                "active": true,
                "filename": "5.html",
                "id": 5,
                "name": "E - 5",
              },
              {
                "active": false,
                "filename": "6.html",
                "id": 6,
                "name": "F - 6",
              },
            ],
            "name": "Test",
            "trial": [],
          }
        }
        useShortname={true}
      />
    </div>
  </div>
  <div
    className="u-cf"
  />
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="one-half column"
      >
        <h2>
          About the Tech Radar
        </h2>
        <p>
          The Extenda Retail Tech Radar is based on the concept introduced by 
          <a
            href="https://www.thoughtworks.com/radar"
          >
            ThoughtWorks
          </a>
          . The Radar contains a list of technologies, complemented by an assessment result, called ring assessment. The following rings are used:
        </p>
        <ul
          className="no-bullets"
        >
          <li>
            <strong>
              Adopt
            </strong>
             — 
            Technologies we have high confidence in and recommend for wide use.
          </li>
          <li>
            <strong>
              Trial
            </strong>
             — 
            Technologies we have seen used with success, but are yet to be proved successfully in wide use and at large scale. Carries higher risk.
          </li>
          <li>
            <strong>
              Assess
            </strong>
             — 
            Technologies that are promising with a clear potential value for us. Requires research and prototyping to analyze its impact.
          </li>
          <li>
            <strong>
              Hold
            </strong>
             — 
            Technologies not recommended for new products or technology we no longer want to invest in. Existing products may still consider these depending on their legacy.
          </li>
        </ul>
      </div>
      <div
        className="one-half column"
      >
        <h2>
          The Purpose
        </h2>
        <p>
          The Tech Radar aims to inspire and support teams at Extenda Retail to pick the best technologies for their projects. It is way to share experience and knowledge between the teams and to create transparency about the technology direction of Extenda Retail. The Tech Radar also becomes a list of dos and don'ts, what to try and to avoid in order to increase success.
        </p>
        <h2>
          How to Contribute
        </h2>
        <p>
          The Tech Radar is maintained on
           
          <a
            href="https://github.com/extenda/tech-radar"
          >
            GitHub
          </a>
          . There you can read more about the process and how to contribute.
        </p>
      </div>
    </div>
  </div>
</Fragment>
`;
